Stop link unwrapping when editing
Safari sets overflow-wrap:break-word; on contenteditable elements.

--- a/css/main.css
+++ b/css/main.css
@@ -187,6 +187,9 @@ body {
   box-sizing: border-box;
   padding: 1em;
   position: relative;
+}
+body,
+[contenteditable=true] {
   overflow-wrap: anywhere;
   word-break: auto-phrase; /* this is experimental */
 }
